Images not showing on github pages trying to fix

--- a/src/style.css
+++ b/src/style.css
@@ -357,7 +357,7 @@ input[type="text"]:focus {
 	}
 
 	#todo-created-at-short-version {
-		display: inline-block;
+		/* display: inline-block; */
 		float: right;
 		margin: 0 0.5rem;
 	}
